Fix image path issue for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="col-md-4 mb-4">
             <article class="card h-100">
               <img
-                src="/images/portfolio-pic.jpg"
+                src="images/portfolio-pic.jpg"
                 class="card-img-top"
                 alt="Project 1"
               />
@@ -61,7 +61,7 @@
           <div class="col-md-4 mb-4">
             <article class="card h-100">
               <img
-                src="/images/5star-arts.png"
+                src="images/5star-arts.png"
                 class="card-img-top"
                 alt="Project 2"
               />
@@ -80,7 +80,7 @@
           <div class="col-md-4 mb-4">
             <article class="card h-100">
               <img
-                src="/images/lactation-site.png"
+                src="images/lactation-site.png"
                 class="card-img-top"
                 alt="Project 3"
               />
